# secure_cartography

./: CHANGES_SUMMARY.md  JUNOS_INTEGRATION.md  MANIFEST.in  README.md  README_Creds.md  README_Discovery.md  README_Events.md  README_JUNOS.md  README_Progress_events.md  README_SNMP_Discovery.md  README_SNMP_Maps.md  README_SSH_Discovery.md  README_Style_Guide.md  README_scng.md  WORKFLOW_WITH_JUNOS.md  add_junos_template.py  cmdb.mermaid  cmdb.sql  describe_cmdb.py  describe_db_create.py  devices2.csv  devices_vulnerabilities_20260117_115207.csv  drawio_mapper2.py  example_config.yaml  graphml_mapper4.py  icon_map_editor.py  main_ui.py  map_editor.py  map_enhance_widget.py  map_merge_widget.py  mermaid1.py  mermaid_viewer.py  mermaid_viewer2.py  mviewer.py  napalm_gui.py  platform_icon_drawio.json  platform_icon_map.json  requirements.txt  setup.py  sqlite_mermaid.py  (+2 more)
admin/: admin_gui.py  bling_home.py  cmdb_load_schema.json  device_arp.py  device_arp_schema.json  device_config_schema.json  device_fingerprint.py  device_fingerprint_schema.json  device_interfaces_schema.json  device_inventory.py  device_inventory_schema.json  device_macs.py  device_macs_schema.json  device_snmp.py  device_snmp_schema.json  hud_icons.py  job_editor.py  jobs.yaml  map_tools_widget.py  mdi_data_gui.py  nav_icons.py  reporting.py  scheduler.py  snmp_config.yaml
docs/: plantuml-diagrams.plantuml  (+1 more)
icons/: router_encoded.txt  (+2 more)
snmp_proxy/: README.md  pyproject.toml
snmp_proxy/src/snmp_proxy/: __init__.py  __main__.py  jobs.py  models.py  server.py  snmp_ops.py  test_api.py  test_pysnmp.py
(+575 files in other folders)
