[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snmp-proxy"
version = "2.0.0"
description = "Async ticket-based SNMP proxy for remote device polling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Scott Peterman" }
]
keywords = ["snmp", "network", "proxy", "async", "polling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pysnmp>=6.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
snmp-proxy = "snmp_proxy.__main__:main"

[project.urls]
Homepage = "https://github.com/scottpeterman/snmp-proxy"
Repository = "https://github.com/scottpeterman/snmp-proxy"

[tool.hatch.build.targets.wheel]
packages = ["src/snmp_proxy"]
